[metadata]
name = l4meta
version = 0.2.0
author = Centre for Computational Law
author_email = cclaw@smu.edu.sg
license = Apache-2.0
description = Read and write L4 metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = 
keywords = L4, metadata
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML==5.4.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    l4meta = l4meta.cli:main

[flake8]
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist,
    config
